<resources>
    <!-- Основной текст -->
    <string name="app_name">Casehub</string>
    <string name="password">Введите ваш пароль</string>
    <string name="login">Войти</string>
    <string name="email">Введите вашу почту</string>
    <string name="welcome_title">С Возвращением!</string>
    <string name="welcome_subtitle">войдите, чтобы получить доступ к учетной записи</string>
    <string name="skip_text">Пропустить</string>
    <string name="losePass">Забыли пароль?</string>
    <string name="no_acc_text">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="main_text">Главная</string>
    <string name="work_shop_text">Мастерская</string>
    <string name="profile_text">Профиль</string>


    <!-- Окно кейсов -->
    <string name="work_shop_error_title">Список кейсов пуст</string>
    <string name="work_shop_error_text">Похоже вы еще не создали ни одного \n кейса. Самое время это исправить!</string>

    <!-- Регистрация -->
    <string name="button_no_register_text">Пропустить</string>
    <string name="register_text">Зарегистрируйтесь</string>
    <string name="child_register_text">и присоединитесь к сообществу Casehub</string>
    <string name="fio_input_text">Введите ФИО</string>
    <string name="email_input_text">Введите почту</string>
    <string name="password_input_text">Введите пароль</string>
    <string name="password_again_input_text">Повторите пароль</string>
    <string name="button_text_register">Зарегистрироваться</string>
    <string name="register_text_end">Уже есть аккаунт? Войти</string>
    <string name="next_page_log_text">Войти</string>

    <!-- Материалы текстов главной страницы кейсов -->
    <string name="home_fragment_tab_all">Всё</string>
    <string name="home_fragment_tab_favorite">Избранные</string>




</resources>